fix (all): visible desde celulares

--- a/master.css
+++ b/master.css
@@ -81,7 +81,7 @@ strong{
 }
 
 
-@media (max-width: 480px){
+@media screen and (max-width: 1024px){
     main nav a {
         width: 100%;
         padding: 16px 20px;
